Fix bullet position of floating direction:rtl list items.  b=332360  Patch by Hideo Saito <saito@densan.co.jp>.  r+sr=dbaron (with modifications)